# lark-agent-bridge

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly-e2e.yml  publish-pypi.yml
docs/: error-codes.md  github-issue-drafts.md  release-gate.md  v1-delivery-backlog.md
src/lark_agent_bridge/: __init__.py  __main__.py  cli.py  cli_forward.py  self_check.py
src/lark_agent_bridge/core/: __init__.py  detect.py  exit_codes.py  install.py  permissions.py
src/lark_agent_bridge/manifest/: __init__.py  merge.py
src/lark_agent_bridge/runtimes/: __init__.py  copaw.py  openclaw.py
src/lark_agent_bridge/skills/lark_cli_bridge/: SKILL.md
src/lark_agent_bridge/skills/lark_cli_bridge/references/: auth_and_identity.md  discovery.md  domains.md  output_and_errors.md
tests/: test_cli_commands.py  test_cli_forward.py  test_cli_forward_run.py  test_deploy_pipeline.py  test_detect.py  test_manifest_merge.py  test_paths.py  test_permissions.py
tests/integration/: test_lark_cli_optional.py
