[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-agent-bridge"
version = "0.1.0"
description = "Bridge CoPaw (and future runtimes) with larksuite/lark-cli for Feishu/Lark automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lark Agent Bridge contributors" }]
dependencies = [
  "click>=8.0,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lark-bridge = "lark_agent_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lark_agent_bridge" = ["skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
