[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-agent-bridge"
version = "0.3.8"
description = "Bridge QwenPaw (compatible with CoPaw) with larksuite/lark-cli for Feishu/Lark automation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Lark Agent Bridge contributors" }]
keywords = ["feishu", "lark", "qwenpaw", "copaw", "agent", "cli", "bridge"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "click>=8.0,<9",
]

[project.urls]
Homepage = "https://github.com/guodaxia103/lark-agent-bridge"
Repository = "https://github.com/guodaxia103/lark-agent-bridge"
Issues = "https://github.com/guodaxia103/lark-agent-bridge/issues"
Changelog = "https://github.com/guodaxia103/lark-agent-bridge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lark-bridge = "lark_agent_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lark_agent_bridge" = ["skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require lark-cli on PATH",
]
